Fix invisible mobile sub nav

--- a/tc-nav-react-demo/src/components/TopNav/styles.module.scss
+++ b/tc-nav-react-demo/src/components/TopNav/styles.module.scss
@@ -11,7 +11,6 @@
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   color: $gray-90;
   position: relative;
-  overflow: hidden;
 
   a {
     text-decoration: none;
@@ -59,12 +58,9 @@
   position: absolute;
   width: 100%;
   height: 60px;
+  left: 0;
   top: 60px;
   z-index: 1;
-
-  &.mobileNavSubMenuOpen {
-    height: calc(100vh - 60px);
-  }
 
   @include mobile-only;
 
